[tool.poetry]
name = "dotfiles"
version = "0.0.0"
description = ""
authors = ["Hibiki <mail@4513echo.dev>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.tool.dependencies]
black = "^26.0.0"
isort = "^7.0.0"
mypy = "^1.8.0"

# cli tools that has low priority
[tool.poetry.group.util.dependencies]
# ddgr = "^2.1"
# httpie = "^3.2.1"
# jc = "^1.22.2"
# NOTE: pepdocs uses too old version of click
# pepdocs = "^0.3.0"
# pip-chill = "^1.0.1"
# toml-sort = "^0.20.1"
# vim-vint = "^0.3.21"
# yamllint = "^1.28.0"

[tool.poetry.group.flake8.dependencies]
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
flake8-isort = "^6.1.1"
pep8-naming = "^0.15.0"

[tool.poetry.group.lsp.dependencies]
python-lsp-server = { version = "^1.9.0", extras = ["all"] }
python-lsp-black = "^2.0.0"
pyls-isort = "^0.2.2"
pylsp-mypy = "^0.7.0"

[tool.poetry.group.poetry.dependencies]
poetry = "^2.0.0"
poetry-plugin-export = "^1.6.0"
poetry-dynamic-versioning-plugin = "^0.4.0"

[tool.poetry.group.game.dependencies]
pycowsay = "^0.0.0.2"
term2048 = "^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
